criação de ua rota para buscar usuarios apartir de seu id
